Move to latest dependencies, including Kubernetes Java Client 14.0.0