@@ -373,9 +373,9 @@ public class LoggingExporter {
                             .capabilities(new V1Capabilities()
                                 .add(Arrays.asList("SYS_CHROOT"))))
                         .addPortsItem(new V1ContainerPort()
-                            .containerPort(new Integer(elasticsearchHttpPort)))
+                            .containerPort(Integer.valueOf(elasticsearchHttpPort)))
                         .addPortsItem(new V1ContainerPort()
-                            .containerPort(new Integer(elasticsearchHttpsPort)))
+                            .containerPort(Integer.valueOf(elasticsearchHttpsPort)))
                         .addEnvItem(new V1EnvVar()
                             .name("ES_JAVA_OPTS")
                             .value("-Xms1024m -Xmx1024m"))
@@ -415,7 +415,7 @@ public class LoggingExporter {
                         .name(kibanaName)
                         .image(kibanaImage)
                         .ports(Arrays.asList(new V1ContainerPort()
-                            .containerPort(new Integer(kibanaContainerPort)))))))));
+                            .containerPort(Integer.valueOf(kibanaContainerPort)))))))));
 
     return kibanaDeployment;
   }
